# GLEngine

./: .gitignore  CMakeLists.txt  Engine.sln  README.md
Engine/: AssetPaths.h  Camera.cpp  Camera.h  DereferenceIterator.h  Engine.vcxproj  Engine.vcxproj.filters  Light.cpp  Light.h  Material.cpp  Material.h  MatrixCollection.cpp  MatrixCollection.h  ModelData.cpp  ModelData.h  ModelLoader.cpp  ModelLoader.h  ObjectData.cpp  ObjectData.h  RenderFlags.h  SceneData.cpp  SceneData.h  VBOData.h  VBOManager.cpp  VBOManager.h  shaderLoader.cpp  shaderloader.h  source.cpp
Engine/InputHandler/: CameraMouse.cpp  CameraMouse.h  InputHandler.cpp
Engine/LightData/: Light.h  LightStruct.h  Material.cpp  Material.h
Engine/Loaders/: Model.cpp  Model.h  ModelData.cpp  ModelData.h  ModelGenerator.cpp  ModelGenerator.h  ModelLoader.cpp  ModelLoader.h  shaderLoader.cpp  shaderLoader.h  textureLoader.cpp  textureLoader.h
Engine/Renderers/: ShadowRenderer.cpp  ShadowRenderer.h  SkyboxRenderer.cpp  SkyboxRenderer.h  StandardRenderer.cpp  StandardRenderer.h  TessellationRenderer.cpp  TessellationRenderer.h
Engine/shaders/: fshader.glsl  shadowV.glsl  skyboxF.glsl  skyboxV.glsl  tessellationF.glsl  tessellationTCS.glsl  tessellationTES.glsl  tessellationV.glsl  textureF.glsl  textureV.glsl  vshader.glsl
libs/: glfw3.lib
shaders/: shadowF.glsl  spriteF.glsl  spriteV.glsl  tessellationF.glsl  tessellationTCS.glsl  tessellationTES.glsl  tessellationV.glsl
src/: Camera.cpp  Camera.h  MatrixCollection.cpp  MatrixCollection.h  ObjectData.cpp  ObjectData.h  RenderFlags.cpp  SceneData.cpp  VBOData.h  VBOManager.h  source.cpp
src/InputHandler/: CameraMouse.cpp  InputHandler.cpp  InputHandler.h
src/LightData/: Light.cpp  Material.h
src/Loaders/: Model.h  ModelGenerator.cpp  ModelGenerator.h  ModelLoader.cpp
src/Renderers/: ShadowRenderer.h  SkyboxRenderer.cpp  (+7 more)
(+5 files in other folders)
